Limpezas e novos testes